remove some error

--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -3,9 +3,17 @@
 
 
     <LinearLayout
+        android:background="@color/whiteBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+
+        <com.github.moduth.uikit.ClearEditText
+            style="@style/FormEditText"
+            android:hint="@string/login_phone"
+            />
+
 
     </LinearLayout>
 
